align fixed in label

--- a/InputValidation/registration/registration.css
+++ b/InputValidation/registration/registration.css
@@ -29,7 +29,7 @@
 .login_section h4 {
     text-align: center;
     padding-top: 45px;
-    color: black;
+    color: rgb(124, 100, 100);
     font-weight: 700;
     padding-bottom: 20px;
 
@@ -50,20 +50,24 @@
     width: 18px;
     height: 18px;
     margin-top: 25px;
-    margin-left: 1.5rem;
-    
-    /* accent-color: auto; */   
+    margin-left: 1.5rem; 
     /* left: 1rem;
     position: relative; */
 
 }
-/* input[type] */
+
 input[type="radio"] {
-    /* background-color: blue; */
     accent-color: blue; 
  }
 .radioInfo label{
    padding-left: 6px;
+   /* padding-top: 182px; */
+   bottom: 4px;
+   position: relative;
+   font-size: 16px;
+   /* margin-bottom: 10px; */
+   color: rgb(124, 100, 100);
+   font-weight: 600;
 
 }
 
